fixed pixel alignment

--- a/index.css
+++ b/index.css
@@ -430,7 +430,6 @@ a{
 }
 
 #Resume-experience-side-wrapper{
-   width: 45vw;
    height: 50vh;
    float: right;
    color: var(--gunmetal);
@@ -674,8 +673,11 @@ a{
       content: url("data:image/svg+xml,%3Csvg aria-hidden='true' transform='rotate(90)' width='20' height='20' focusable='false' data-prefix='fas' data-icon='angle-right' class='svg-inline--fa fa-angle-right fa-w-8' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 512'%3E%3Cpath fill='%23D64933' d='M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z'%3E%3C/path%3E%3C/svg%3E");
    }
 
-   #Resume-icons-side-wrapper{
-      border-right: 2px solid var(--gunmetal);
+   #Resume-experience-side-wrapper{
+      border-left: 2px solid var(--gunmetal);
+      padding-left: 3vw;
+      width: 42vw;
    }
+
 
 }
